objects/pse__Revenue_Forecast_Batch__c.object
<CustomObject>
    <customHelpPage>pse__RevenueForecastBatchHelp</customHelpPage>
    <description>Stores the status and details of revenue forecast batch Apex jobs.</description>
    <fields>
        <fullName>pse__Batch_Id__c</fullName>
        <description>A unique identifier for the revenue forecast batch Apex job. This is a system controlled field.</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique identifier for the revenue forecast batch Apex job. This is a system controlled field.</inlineHelpText>
        <label>Batch ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the batch process record used for the revenue forecast.</description>
        <inlineHelpText>A lookup to the batch process record used for the revenue forecast.</inlineHelpText>
        <label>Batch Process</label>
        <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Revenue Forecast Batches</relationshipLabel>
        <relationshipName>Revenue_Forecast_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The current status of the batch job.</description>
        <inlineHelpText>The current status of the batch job.</inlineHelpText>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Revenue Forecast Batch</label>
    <nameField>
        <displayFormat>RFB-{00000000}</displayFormat>
        <label>Revenue Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecast Batches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>